fix(house selector): remove scrollbar

--- a/src/components/common/house-selector/house-selector.module.css
+++ b/src/components/common/house-selector/house-selector.module.css
@@ -5,6 +5,7 @@
     max-height: 70vh;
     overflow-y: auto;
     padding: 11px;
+    scrollbar-width: none;
 }
 
 .option-item{
@@ -28,3 +29,4 @@
     transition: ease-in 0.3s;
     box-shadow:0px 5px 10px 2px hsla(259, 100%, 60%, 0.5);
 }
+
